# intel-sgx-remote-attestation-poc

./: .gitignore  Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl
enclave/src/: cert.rs  hex.rs  lib.rs
modules/crypto/: Cargo.toml
modules/crypto/src/: key.rs  lib.rs
modules/crypto/src/sgx/: key_manager.rs
