[package]
name = "MutualRA"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "mra"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts    = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd    = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand    = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
crypto = { path = "../modules/crypto", default-features = false }

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
branch = "mesalock_sgx"
features = ["dangerous_configuration"]

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_align_struct_attribute = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_alloc = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_backtrace = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_backtrace_sys = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_build_helper = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_cov = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_crypto_helper = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_demangle = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_libc = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_no_tstd = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand_derive = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive_internals = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto_helper = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tdh = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tkey_exchange = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tprotected_fs = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tse = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tseal = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tunittest = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
#sgx_ucrypto = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_unwind = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
#sgx_urts = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
