[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { rev = "v1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
tiny-keccak = "1.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4.8", default-features = false }
flex-error = { version = "0.4.4", default-features = false }


secp256k1-sgx = { package = "libsecp256k1", rev = "sgx_1.1.3-patch", git = "https://github.com/bluele/libsecp256k1-rs-sgx"}
